fixed postion note

--- a/pub/index.html
+++ b/pub/index.html
@@ -13,14 +13,16 @@
 <h1 style="margin: 3%"> Sticky Note Demo </h1>
 
 <div style="align-content: center; align-items: center; margin: auto; width: 50%">
-    <button id="b1" onclick="onClickB1()">Fixed Top Right</button>
-    <button id="b2" onclick="onClickB2()">Fixed Bottom Right</button>
-    <button id="b3" onclick="onClickDelete()">Delete All</button>
+    <button id="b0" onclick="onClickDelete()">Remove All</button>
+    <button id="b1" onclick="onClickB1('top-right')">Fixed Top Right</button>
+    <button id="b2" onclick="onClickB2('bottom-right')">Fixed Bottom Right</button>
+    <button id="b3" onclick="onClickB3('top-left')">Fixed Top Left</button>
+    <button id="b4" onclick="onClickB4('bottom-left')">Fixed Bottom Left</button>
 </div>
 
 <h2 style="margin-left: 10%">Lorem Ipsum</h2>
 
-<div style="margin-right: 30%; margin-left: 10%">
+<div style="margin-right: 30%; margin-left: 10%" id="content">
     <p class="textP">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at consectetur tellus,
         et sodales leo. Donec lectus justo, dignissim sit amet tincidunt at, fringilla a justo.
@@ -55,6 +57,48 @@
     </p>
 
     <p class="textP">
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
         Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
         libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
         Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
