basic note functionality

--- a/pub/index.html
+++ b/pub/index.html
@@ -7,6 +7,8 @@
     <script type="application/javascript" src="../StickyNotes.js"></script>
     <script type="application/javascript" src="example.js"></script>
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../StickyNotes.css">
 </head>
 <body>
 
@@ -16,8 +18,8 @@
     <button id="b0" onclick="onClickDelete()">Remove All</button>
     <button id="b1" onclick="onClickB1('top-right')">Fixed Top Right</button>
     <button id="b2" onclick="onClickB2('bottom-right')">Fixed Bottom Right</button>
-    <button id="b3" onclick="onClickB3('top-left')">Fixed Top Left</button>
-    <button id="b4" onclick="onClickB4('bottom-left')">Fixed Bottom Left</button>
+<!--    <button id="b3" onclick="onClickB3('top-left')">Fixed Top Left</button>-->
+<!--    <button id="b4" onclick="onClickB4('bottom-left')">Fixed Bottom Left</button>-->
 </div>
 
 <h2 style="margin-left: 10%">Lorem Ipsum</h2>
