title for notes

--- a/pub/index.html
+++ b/pub/index.html
@@ -16,8 +16,8 @@
 
 <div style="align-content: center; align-items: center; margin: auto; width: 50%">
     <button id="b0" onclick="onClickDelete()">Remove All</button>
-    <button id="b1" onclick="onClickB1('top-right')">Fixed Top Right</button>
-    <button id="b2" onclick="onClickB2('bottom-right')">Fixed Bottom Right</button>
+    <button id="b1" onclick="onClickB1('top-right')">Open Note 1</button>
+    <button id="b2" onclick="onClickB2('bottom-right')">Open Note 2</button>
 <!--    <button id="b3" onclick="onClickB3('top-left')">Fixed Top Left</button>-->
 <!--    <button id="b4" onclick="onClickB4('bottom-left')">Fixed Bottom Left</button>-->
 </div>
