--- a/pub/index.html
+++ b/pub/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Sticky Note Demo</title>
 
-    <script type="application/javascript" src="../StickyNotes.js"></script>
+    <script type="application/javascript" src="/StickyNotes.js"></script>
     <script type="application/javascript" src="example.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="../StickyNotes.css">
+    <link rel="stylesheet" type="text/css" href="/StickyNotes.css">
 </head>
 <body>
 
