--- a/pub/index.html
+++ b/pub/index.html
@@ -15,9 +15,11 @@
 <h1 style="margin: 3%"> Sticky Note Demo </h1>
 
 <div id='dashButtons'>
-    <button id="b0" onclick="onClickDelete()">Remove All</button>
+    <button id="b0" onclick="onClickDelete()">Close All</button>
+    <button id="b00" onclick="onClickOpen()">Open All</button>
     <button id="b1" onclick="onClickB1('top-right')">Open a Fixed Note</button>
     <button id="b2" onclick="onClickB2('bottom-right')">Open Another Fixed Note</button>
+
 </div>
 
 <h2 style="margin-left: 10%">Lorem Ipsum</h2>
