--- a/pub/index.html
+++ b/pub/index.html
@@ -11,112 +11,125 @@
     <link rel="stylesheet" type="text/css" href="/StickyNotes.css">
 </head>
 <body>
+<div id="landing_container">
+    <div id="landing_header">
+        <h1> Sticky Note 📝</h1>
+        <h4> Note taking on the web hasn't been this easy!</h4>
+    </div>
 
-<h1 style="margin: 3%"> Sticky Note Demo </h1>
+    <div>
+        <span class="nav_link">Checkout the detailed API documentation! <a href="doc.html">HERE</a></span>
+    </div>
 
-<div id='dashButtons'>
-    <button id="b0" onclick="onClickDelete()">Close All</button>
-    <button id="b00" onclick="onClickOpen()">Open All</button>
-    <button id="b1" onclick="onClickB1('top-right')">Open a Fixed Note</button>
-    <button id="b2" onclick="onClickB2('bottom-right')">Open Another Fixed Note</button>
+    <h3>Now let's see the features!</h3>
 
-</div>
 
-<h2 style="margin-left: 10%">Lorem Ipsum</h2>
 
-<div id="content">
-    <p class="textP" id="p1">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at consectetur tellus,
-        et sodales leo. Donec lectus justo, dignissim sit amet tincidunt at, fringilla a justo.
-        Donec gravida auctor laoreet. Vivamus maximus orci eget lectus auctor porttitor.
-        Aliquam erat volutpat. Nullam lobortis lacus non congue faucibus.
-        Morbi maximus lorem ut leo bibendum pulvinar eu vel quam. Etiam eu metus id dolor pharetra sollicitudin.
-        Aliquam quis ipsum venenatis, euismod mauris quis, lacinia urna. Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Aliquam quis ante quam. Proin nisi risus, blandit in tincidunt et,
-        porta sed arcu. Nulla tincidunt, libero pellentesque lacinia semper, justo justo ullamcorper lectus,
-        maximus dignissim urna libero et ex.
-    </p>
 
-    <p class="textP" id="p2">
-        Nunc interdum finibus ipsum, ac ullamcorper velit. Quisque non urna at nibh pharetra scelerisque.
-        Aliquam erat volutpat. Integer quis nulla dui. Nunc sed pretium mi. Morbi et varius felis.
-        Sed ac molestie augue. Nullam non ex eget leo venenatis iaculis et eget ligula.
-        Curabitur tincidunt sapien at ligula auctor, ultrices hendrerit augue commodo.
-        Maecenas vulputate pulvinar arcu quis aliquam. Maecenas egestas sodales odio,
-        quis accumsan sem interdum non. Morbi efficitur sodales sapien a vestibulum.
-        Nunc interdum finibus ipsum, ac ullamcorper velit. Quisque non urna at nibh pharetra scelerisque.
-        Aliquam erat volutpat. Integer quis nulla dui. Nunc sed pretium mi. Morbi et varius felis.
-        Sed ac molestie augue. Nullam non ex eget leo venenatis iaculis et eget ligula.
-        Curabitur tincidunt sapien at ligula auctor, ultrices hendrerit augue commodo.
-        Maecenas vulputate pulvinar arcu quis aliquam. Maecenas egestas sodales odio,
-        quis accumsan sem interdum non. Morbi efficitur sodales sapien a vestibulum.
-        <button id="b3" onclick="onClickB3('right')">Take Note!</button>
-    </p>
+    <div id='dashButtons'>
+        <button id="b0" onclick="onClickDelete()">Close All</button>
+        <button id="b00" onclick="onClickOpen()">Open All</button>
+        <button id="b1" onclick="onClickB1('top-right')">Open a Fixed Note</button>
+        <button id="b2" onclick="onClickB2('bottom-right')">Open Another Fixed Note</button>
 
-    <p class="textP" id="p3">
-        Suspendisse arcu lacus, vulputate eu velit vitae, laoreet faucibus ipsum.
-        Vestibulum felis sem, bibendum vel imperdiet in, bibendum vitae nunc. Fusce ultrices magna nibh,
-        eu fermentum nulla interdum id. Nulla vel tincidunt leo. Donec pretium purus non finibus blandit.
-        Quisque semper elit et sapien rhoncus congue. Phasellus convallis felis eu mi blandit hendrerit.
-        Vestibulum interdum vestibulum molestie. Vivamus euismod turpis enim, at sodales nulla condimentum non.
-        Vestibulum in justo vulputate nunc congue laoreet. Aenean vel posuere eros, ac malesuada libero.
-        Nunc ac ex ac lacus lobortis fermentum. Vestibulum sed sem ut arcu accumsan vestibulum.
-        Sed facilisis porttitor sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Sed quis magna in odio tristique accumsan.
-    </p>
+    </div>
 
-    <p class="textP" id="p4">
-        <button id="b4" onclick="onClickB4('left')">See Note</button><br>
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-        Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-        libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-        Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-        eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-        Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-        aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-    </p>
+    <h2 style="margin-left: 10%">Lorem Ipsum</h2>
 
+    <div id="content">
+        <p class="textP" id="p1">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at consectetur tellus,
+            et sodales leo. Donec lectus justo, dignissim sit amet tincidunt at, fringilla a justo.
+            Donec gravida auctor laoreet. Vivamus maximus orci eget lectus auctor porttitor.
+            Aliquam erat volutpat. Nullam lobortis lacus non congue faucibus.
+            Morbi maximus lorem ut leo bibendum pulvinar eu vel quam. Etiam eu metus id dolor pharetra sollicitudin.
+            Aliquam quis ipsum venenatis, euismod mauris quis, lacinia urna. Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit. Aliquam quis ante quam. Proin nisi risus, blandit in tincidunt et,
+            porta sed arcu. Nulla tincidunt, libero pellentesque lacinia semper, justo justo ullamcorper lectus,
+            maximus dignissim urna libero et ex.
+        </p>
+
+        <p class="textP" id="p2">
+            Nunc interdum finibus ipsum, ac ullamcorper velit. Quisque non urna at nibh pharetra scelerisque.
+            Aliquam erat volutpat. Integer quis nulla dui. Nunc sed pretium mi. Morbi et varius felis.
+            Sed ac molestie augue. Nullam non ex eget leo venenatis iaculis et eget ligula.
+            Curabitur tincidunt sapien at ligula auctor, ultrices hendrerit augue commodo.
+            Maecenas vulputate pulvinar arcu quis aliquam. Maecenas egestas sodales odio,
+            quis accumsan sem interdum non. Morbi efficitur sodales sapien a vestibulum.
+            Nunc interdum finibus ipsum, ac ullamcorper velit. Quisque non urna at nibh pharetra scelerisque.
+            Aliquam erat volutpat. Integer quis nulla dui. Nunc sed pretium mi. Morbi et varius felis.
+            Sed ac molestie augue. Nullam non ex eget leo venenatis iaculis et eget ligula.
+            Curabitur tincidunt sapien at ligula auctor, ultrices hendrerit augue commodo.
+            Maecenas vulputate pulvinar arcu quis aliquam. Maecenas egestas sodales odio,
+            quis accumsan sem interdum non. Morbi efficitur sodales sapien a vestibulum.
+            <button id="b3" onclick="onClickB3('right')">Take Note!</button>
+        </p>
+
+        <p class="textP" id="p3">
+            Suspendisse arcu lacus, vulputate eu velit vitae, laoreet faucibus ipsum.
+            Vestibulum felis sem, bibendum vel imperdiet in, bibendum vitae nunc. Fusce ultrices magna nibh,
+            eu fermentum nulla interdum id. Nulla vel tincidunt leo. Donec pretium purus non finibus blandit.
+            Quisque semper elit et sapien rhoncus congue. Phasellus convallis felis eu mi blandit hendrerit.
+            Vestibulum interdum vestibulum molestie. Vivamus euismod turpis enim, at sodales nulla condimentum non.
+            Vestibulum in justo vulputate nunc congue laoreet. Aenean vel posuere eros, ac malesuada libero.
+            Nunc ac ex ac lacus lobortis fermentum. Vestibulum sed sem ut arcu accumsan vestibulum.
+            Sed facilisis porttitor sapien. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Sed quis magna in odio tristique accumsan.
+        </p>
+
+        <p class="textP" id="p4">
+            <button id="b4" onclick="onClickB4('left')">See Note</button><br>
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+        </p>
+
+    </div>
 </div>
 </body>
 </html>
