more landing page

--- a/pub/doc.html
+++ b/pub/doc.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sticky Note Documentation</title>
+    <title>Sticky Notes Documentation</title>
     <link rel="stylesheet" href="./doc.css">
 </head>
 <body>
