more landing page

--- a/pub/index.html
+++ b/pub/index.html
@@ -23,9 +23,20 @@
 
     <h2>Now let's see the features!</h2>
 
+    <div id="example-instance">
+        <img id="example-img" src="note.jpg">
+        <div style="margin-left: 30px">
+            <p>This is an instance of Sticky Notes</p>
+            <p>You can edit the title</p>
+            <p>You can also change the position by the buttons</p>
+            <p>You can even download the note!</p>
+        </div>
+    </div>
+
+
     <div style="margin-top: 3em">
-        <p>First, you might want to take some note as you read through this page.
-            <button id="b1" onclick="onClickB1('top-right')">Gimme a Note!</button>
+        <p>You might want to take some note as you read through this page.
+            <button id="b1" onclick="onClickB1('top-right')">Gimme one!</button>
         </p>
 
         <p>You want another one?
@@ -45,11 +56,13 @@
         <p>Or, you just want to open all the notes that you had ever opened.
             <button id="b00" onclick="onClickOpen()">Open All!</button>
         </p>
-        <p>Note: These two buttons does nothing when you have not ever opened a note.</p>
+        <p>Note: These two buttons does nothing when you have not ever opened a single note.</p>
     </div>
 
-    <div style="margin-top: 3em">
-        <p>Now we have an paragraph here. </p>
+    <h2 style="margin-top: 3em">Some Use Cases!</h2>
+
+    <div >
+        <p>We have an paragraph here. </p>
         <div class="content" >
             <p class="textP" id="p1">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur at consectetur tellus,
@@ -70,64 +83,38 @@
     </div>
 
 
-    <div class="content">
-
-        <p class="textP" id="p4">
-            <button id="b4" onclick="onClickB4('left')">See Note</button><br>
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
-            Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
-            libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
-            Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
-            eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
-            Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
-            aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+    <div style="margin-top: 3em">
+        <p>Now we have another paragraph here. </p>
+        <div class="content">
+            <p class="textP" id="p4">
+                Suspendisse elementum enim ac ex sodales accumsan. Aliquam consectetur, diam at cursus tempus,
+                libero mauris venenatis justo, sed vehicula metus purus et ante. Pellentesque quis bibendum massa.
+                Nulla sit amet efficitur dolor. Nam vitae eleifend libero. Quisque efficitur pulvinar nunc,
+                eget rhoncus ex placerat vitae. Integer tristique et lectus quis pretium.
+                Duis aliquet erat et metus lobortis faucibus. Fusce tortor tortor, vestibulum eu ipsum ut,
+                aliquam semper ligula. Aliquam ut dictum lectus. Sed vel enim est. Duis et ante arcu.
+                <br>
+                ... ... ... <br>
+                ... ... <br>
+                ...
+            </p>
+        </div>
+        <p>This paragraph is so long and boring, that you just cannot finish it.</p>
+        <p>Luckily, we have prepared the note for you!
+            <button id="b4" onclick="onClickB4('left')">See Note</button>
         </p>
-
+        <p>Yes, one sticky note can come with predefined note in it, so you don't have to take it yourself!</p>
     </div>
 
-    <h3>Customization!</h3>
 
+
+
+    <h2 style="margin-top: 3em">Customization!</h2>
+    <div>
+        <p>Maybe you don't want a yellow </p>
+
+
+    </div>
 
 </div>
 </body>
