more landing page

--- a/pub/index.html
+++ b/pub/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div style="margin-top: 3em;margin-bottom: 3em">
-        <span class="nav_link">Checkout the detailed API documentation! <a href="doc.html">HERE</a></span>
+        <span class="nav_link">Checkout the detailed API documentation! <a href="doc.html" target="_blank">HERE</a></span>
     </div>
 
     <h2>Now let's see the features!</h2>
@@ -111,10 +111,17 @@
 
     <h2 style="margin-top: 3em">Customization!</h2>
     <div>
-        <p>Maybe you don't want a yellow </p>
-
-
+        <p>Maybe you don't want a yellow sticky note, but a pink one!
+            <button id="b-color" onclick="onClickColor('bottom-right')">Gimme That!</button>
+        </p>
+        <p>If pink is not what you want, get some random colors!
+            <button id="c-color" onclick="changeColor()">Roll a color!</button>
+        </p>
+        <p>The color of the note can be dynamically changed.</p>
     </div>
+
+    <h3>Don't forget to checkout the <a href="doc.html" target="_blank">complete documentation</a> for more detailed
+        and advanced topics!</h3>
 
 </div>
 </body>
